修复26.3无法启动&版本下载优化&B1.0 Java8路径
26.3(Java 25)支持:
- bundledJavaMajor 21→25，修复'该版本需要Java 25'预检拦截
- 修复 findVersionId 无法从rawCommand解析版本ID(b1.0等)，从
  versions/<id>/<id>.jar路径提取，避免误用默认1.21.11
- Java 24+跳过 MioExitAgent(含-Djava.security.manager=allow，
  SecurityManager已移除会报错)
- buildCommand javaMajor 按 manifest 完整选择(8/17/21/25)

下载页:
- 新增'仅正式版'开关，隐藏带后缀版本(26.3-snapshot-9等)

B1.0:
- JRE预加载按依赖顺序(verify→zip→java→net→nio)并重试
- jre8 为 glibc 版(含__sF)与 Android bionic 不兼容，已确认